# iai_kinect2

iai_kinect2/: CMakeLists.txt  package.xml
kinect2_bridge/: CMakeLists.txt  package.xml
kinect2_bridge/launch/: kinect2_bridge.launch.py
kinect2_bridge/src/: kinect2_bridge.cpp
kinect2_bridge_component/: CMakeLists.txt  package.xml
kinect2_bridge_component/include/kinect2_bridge_component/: kinect2_bridge_component.h
kinect2_bridge_component/launch/: kinect2_bridge.launch  kinect2_bridge.launch.py
kinect2_bridge_component/src/: kinect2_bridge_component.cpp
kinect2_calibration/: CMakeLists.txt  package.xml
kinect2_registration/: CMakeLists.txt  package.xml
kinect2_registration/include/kinect2_registration/: kinect2_console.h  kinect2_registration.h
kinect2_registration/src/: depth_registration_opencl.cpp  kinect2_registration.cpp
kinect2_viewer/src/: viewer.cpp
