<?xml version="1.0"?>
<package format="2">
  <name>iai_kinect2</name>
  <version>0.0.1</version>
  <description>
    The iai_kinect2 metapackage
  </description>

  <maintainer email="wiedemeyer@informatik.uni-bremen.de">Thiemo Wiedemeyer</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

<!--  <exec_depend>kinect2_calibration</exec_depend>-->
<!--  <exec_depend>kinect2_viewer</exec_depend>-->
  <exec_depend>kinect2_bridge</exec_depend>
  <exec_depend>kinect2_registration</exec_depend>

  <export>
    <metapackage/>
  </export>
</package>
