<?xml version="1.0"?>
<package format="2">
    <name>kinect2_bridge_component</name>
    <version>0.0.1</version>
    <description>The kinect2_bridge_component package</description>

    <maintainer email="wiedemeyer@informatik.uni-bremen.de">Thiemo Wiedemeyer</maintainer>

    <license>Apache 2.0</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <depend>rclcpp</depend>
    <depend>rcpcpp_components</depend>
    <depend>rcutils</depend>
    <depend>tf2</depend>
    <depend>tf2_ros</depend>
    <depend>tf2_geometry_msgs</depend>
    <depend>std_msgs</depend>
    <depend>sensor_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>message_filters</depend>
    <depend>image_transport</depend>
    <depend>kinect2_registration</depend>
    <depend>cv_bridge</depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
